kubernetes-networks/canary/01_canary_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary
  labels:
    name: canary
    app: canary
