kubernetes-networks/canary/02_canary_dc.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
  namespace: canary
  labels:
    name: canary
    app: canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: web-canary
      name: canary
    spec:
      containers:
        - name: web
          image: souljapanic/kib
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
        - name: app
          emptyDir: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-test
  namespace: canary
  labels:
    name: canary-test
    app: canary-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-canary-test
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: web-canary-test
      name: canary-test
    spec:
      containers:
        - name: web
          image: souljapanic/kib
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
        - name: app
          emptyDir: {}
